Update and rename bug_report_e.yml to bug_report.yml

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,7 @@
 name: Bug report
 description: Report titlechanger bugs.
 labels: [ "bug" ]
+assignees: ["lijinhong11"]
 body:
   - type: textarea
     attributes:
